update to include colab

--- a/Introduction/CH1_01-Introduction_Python.ipynb
+++ b/Introduction/CH1_01-Introduction_Python.ipynb
@@ -13,12 +13,14 @@
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Introduction/CH1_01-Introduction_Python.ipynb)\n",
     "\n",
+    "[![OpenInColab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_01-Introduction_Python.ipynb)\n",
     "\n",
     "part of \n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2023\n",
+    "by Gerd Duscher, Spring 2024\n",
     "\n",
     "Microscopy Facilities<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -145,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The angle between vectors a and b is 28.67°\n"
+      "The angle between vectors a and b is 39.63°\n"
      ]
     }
    ],
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -203,7 +205,7 @@
       "    -------\n",
       "        angle: angle between the vectors in radians\n",
       "\n",
-      "The angle between vectors a: [1, 1, 2] and b: [0, 5, 5.44] is 28.67°\n"
+      "The angle between vectors a: [1, 1, 2] and b: [0, 5, 3] is 39.63°\n"
      ]
     }
    ],
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +269,7 @@
      "output_type": "stream",
      "text": [
       "angles of vector field to first vector\n",
-      "[ 0.    28.668 40.203]\n"
+      "[ 0.    39.632 40.203]\n"
      ]
     }
    ],
@@ -365,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": "2",
