--- a/Introduction/CH1_02-Prerequisites.ipynb
+++ b/Introduction/CH1_02-Prerequisites.ipynb
@@ -13,13 +13,15 @@
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Introduction/CH1_02-Prerequisites.ipynb)\n",
     "\n",
+    "[![OpenInColab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_02-Prerequisites.ipynb)\n",
     "\n",
     "\n",
     "part of \n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2023\n",
+    "by Gerd Duscher, Spring 2024\n",
     "\n",
     "Microscopy Facilities<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
@@ -64,6 +66,7 @@
     "\n",
     "\n",
     "These packages are expected to be installed on your computer to run the notebooks of this book.\n",
+    "These packages are already installed in Google colab.\n",
     "\n",
     "For specialist applications we do not reinvent the wheel and use those on an as needed basis.\n",
     "\n",
@@ -77,8 +80,8 @@
     "* [spglib](https://atztogo.github.io/spglib/)\n",
     "\n",
     "\n",
-    "For dialogs, we use the capabilities provided by:\n",
-    "* [PyQt5](https://www.riverbankcomputing.com/software/pyqt/intro)\n",
+    "For dialogs, we use the capabilities of Jupyter Widgets provided by:\n",
+    "* [ipywidgets](https://ipywidgets.readthedocs.io/en/stable/)\n",
     "\n",
     "All routines that are introduced in the notebooks are also available (for analysis) in the provided package  \n",
     "* [pyTEMlib](https://github.com/pycroscopy/pyTEMlib)\n",
@@ -103,10 +106,7 @@
     "The lecture is based on fairly new packages of scipy and numpy, dask, and h5py, which will create problems in old anaconda versions.\n",
     "\n",
     "Once you have installed anaconda\n",
-    "- open the anaconda PowerShell prompt and type:\n",
-    ">conda install -c conda-forge pytemlib\n",
-    "\n",
-    "- or type \n",
+    "type \n",
     ">pip install pyTEMlib\n",
     "\n",
     "Alternatively you can just run the code cell below. Be aware that the installation process may take a while."
@@ -127,20 +127,22 @@
    ],
    "source": [
     "import sys\n",
-    "from pkg_resources import get_distribution, DistributionNotFound\n",
-    "\n",
+    "import importlib.metadata\n",
     "def test_package(package_name):\n",
     "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
     "    try:\n",
-    "        version = (get_distribution(package_name).version)\n",
-    "    except (DistributionNotFound, ImportError) as err:\n",
-    "        version = '-1'\n",
+    "        version = importlib.metadata.version(package_name)\n",
+    "    except importlib.metadata.PackageNotFoundError:\n",
+    "        version = -1\n",
     "    return version\n",
     "\n",
     "# pyTEMlib setup ------------------\n",
-    "if test_package('pyTEMlib') < '0.2023.1.0':\n",
+    "if test_package('pyTEMlib') < '0.2023.9.1':\n",
     "    print('installing pyTEMlib')\n",
-    "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
+    "    !{sys.executable} -m pip install --upgrade git+https://github.com/pycroscopy/pyTEMlib.git@main -q --upgrade\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !{sys.executable} -m pip install numpy==1.24.4\n",
     "# ------------------------------\n",
     "print('done')"
    ]
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -172,10 +174,10 @@
    },
    "outputs": [],
    "source": [
-    "# import matplotlib and numpy with this **magic** command\n",
-    "#                       use \"inline\" instead of \"notebook\" for non-interactive plots\n",
-    "#                       use \"widget\" instead of \"notebook\" for jupyter lab\n",
-    "%matplotlib notebook\n",
+    "# import matplotlib and numpy \n",
+    "# Define iteractivity with this **magic** command\n",
+    "#                       use \"inline\" instead of \"widget\" for non-interactive plots\n",
+    "%matplotlib widget\n",
     "\n",
     "import matplotlib.pylab as plt\n",
     "import numpy as np"
@@ -195,48 +197,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": true
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "blas_armpl_info:\n",
-      "  NOT AVAILABLE\n",
-      "blas_mkl_info:\n",
-      "    libraries = ['mkl_rt']\n",
-      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
-      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
-      "blas_opt_info:\n",
-      "    libraries = ['mkl_rt']\n",
-      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
-      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
-      "lapack_armpl_info:\n",
-      "  NOT AVAILABLE\n",
-      "lapack_mkl_info:\n",
-      "    libraries = ['mkl_rt']\n",
-      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
-      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
-      "lapack_opt_info:\n",
-      "    libraries = ['mkl_rt']\n",
-      "    library_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\lib']\n",
-      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
-      "    include_dirs = ['C:/Users/gduscher/Anaconda3\\\\Library\\\\include']\n",
-      "Supported SIMD extensions in this NumPy install:\n",
-      "    baseline = SSE,SSE2,SSE3\n",
-      "    found = SSSE3,SSE41,POPCNT,SSE42,AVX,F16C,FMA3,AVX2,AVX512F,AVX512CD,AVX512_SKX,AVX512_CLX,AVX512_CNL\n",
-      "    not found = \n",
-      "numpy version:  1.23.5\n",
-      "scipy version:  1.9.3\n"
+      "Build Dependencies:\n",
+      "  blas:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: /c/opt/64/include\n",
+      "    lib directory: /c/opt/64/lib\n",
+      "    name: openblas64\n",
+      "    openblas configuration: USE_64BITINT=1 DYNAMIC_ARCH=1 DYNAMIC_OLDER= NO_CBLAS=\n",
+      "      NO_LAPACK= NO_LAPACKE= NO_AFFINITY=1 USE_OPENMP= SKYLAKEX MAX_THREADS=2\n",
+      "    pc file directory: C:/opt/64/lib/pkgconfig\n",
+      "    version: 0.3.23.dev\n",
+      "  lapack:\n",
+      "    detection method: internal\n",
+      "    found: true\n",
+      "    include directory: unknown\n",
+      "    lib directory: unknown\n",
+      "    name: dep2628220032720\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: unknown\n",
+      "    version: 1.26.3\n",
+      "Compilers:\n",
+      "  c:\n",
+      "    commands: cl\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30153\n",
+      "  c++:\n",
+      "    commands: cl\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30153\n",
+      "  cython:\n",
+      "    commands: cython\n",
+      "    linker: cython\n",
+      "    name: cython\n",
+      "    version: 3.0.7\n",
+      "Machine Information:\n",
+      "  build:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "  host:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "Python Information:\n",
+      "  path: C:\\Users\\runneradmin\\AppData\\Local\\Temp\\cibw-run-frm2g0yv\\cp311-win_amd64\\build\\venv\\Scripts\\python.exe\n",
+      "  version: '3.11'\n",
+      "SIMD Extensions:\n",
+      "  baseline:\n",
+      "  - SSE\n",
+      "  - SSE2\n",
+      "  - SSE3\n",
+      "  found:\n",
+      "  - SSSE3\n",
+      "  - SSE41\n",
+      "  - POPCNT\n",
+      "  - SSE42\n",
+      "  - AVX\n",
+      "  - F16C\n",
+      "  - FMA3\n",
+      "  - AVX2\n",
+      "  - AVX512F\n",
+      "  - AVX512CD\n",
+      "  - AVX512_SKX\n",
+      "  - AVX512_CLX\n",
+      "  - AVX512_CNL\n",
+      "  - AVX512_ICL\n",
+      "\n",
+      "numpy version:  1.26.3\n",
+      "scipy version:  1.11.4\n"
      ]
     }
    ],
@@ -281,20 +325,22 @@
    ],
    "source": [
     "import sys\n",
-    "from pkg_resources import get_distribution, DistributionNotFound\n",
-    "\n",
+    "import importlib.metadata\n",
     "def test_package(package_name):\n",
     "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
     "    try:\n",
-    "        version = get_distribution(package_name).version\n",
-    "    except (DistributionNotFound, ImportError):\n",
-    "        version = '-1'\n",
+    "        version = importlib.metadata.version(package_name)\n",
+    "    except importlib.metadata.PackageNotFoundError:\n",
+    "        version = -1\n",
     "    return version\n",
     "\n",
     "# pyTEMlib setup ------------------\n",
-    "if test_package('pyTEMlib') <= '0.2023.1.0':\n",
+    "if test_package('pyTEMlib') < '0.2023.9.1':\n",
     "    print('installing pyTEMlib')\n",
-    "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
+    "    !{sys.executable} -m pip install --upgrade git+https://github.com/pycroscopy/pyTEMlib.git@main -q --upgrade\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !{sys.executable} -m pip install numpy==1.24.4\n",
     "# ------------------------------\n",
     "print('done')"
    ]
@@ -353,6 +399,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
+      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
       "Symmetry functions of spglib enabled\n",
       "Using kinematic_scattering library version {_version_ }  by G.Duscher\n"
      ]
@@ -385,7 +433,7 @@
     {
      "data": {
       "text/plain": [
-       "<Popen: returncode: None args: ['C:\\\\Users\\\\gduscher\\\\Anaconda3\\\\python.exe'...>"
+       "<Popen: returncode: None args: ['C:\\\\Users\\\\gduscher\\\\AppData\\\\Local\\\\anacon...>"
       ]
      },
      "execution_count": 6,
@@ -418,9 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Navigation\n",
     "- <font size = \"3\">  **Back  [Python as it is used here](CH1_01-Introduction_Python.ipynb)** </font>\n",
@@ -580,7 +626,10 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "$('<div id=\"toc\"></div>').css({position: 'fixed', top: '120px', left: 0}).appendTo(document.body);\n$.getScript('https://kmahelona.github.io/ipython_notebook_goodies/ipython_notebook_toc.js');\n",
+      "application/javascript": [
+       "$('<div id=\"toc\"></div>').css({position: 'fixed', top: '120px', left: 0}).appendTo(document.body);\n",
+       "$.getScript('https://kmahelona.github.io/ipython_notebook_goodies/ipython_notebook_toc.js');\n"
+      ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -605,9 +654,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pyTEMlib",
    "language": "python",
-   "name": "python3"
+   "name": "pytemlib"
   },
   "language_info": {
    "codemirror_mode": {
@@ -619,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": "3",
@@ -675,5 +724,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
