compatibility to colab

--- a/Diffraction/CH2_01-Electron.ipynb
+++ b/Diffraction/CH2_01-Electron.ipynb
@@ -16,16 +16,18 @@
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Diffraction/CH2_01-Electron.ipynb)\n",
     "\n",
-    "\n",
-    "part of \n",
+    "[![OpenInColab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main//Diffraction/CH2_01-Electron.ipynb)\n",
+    " \n",
+    "part of\n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2023\n",
+    "by Gerd Duscher and Khalid Hattar, Spring 2024\n",
     "\n",
-    "Microscopy Facilities<br>\n",
+    "Microscopy Facilities and Ion Beam Facility<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
-    "Materials Science & Engineering<br>\n",
+    "Materials Science & Engineering and Nuclear Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
     "Background and methods to analysis and quantification of data acquired with transmission electron microscopes.\n",
@@ -56,17 +58,16 @@
    ],
    "source": [
     "import sys\n",
-    "from pkg_resources import get_distribution, DistributionNotFound\n",
-    "\n",
+    "import importlib.metadata\n",
     "def test_package(package_name):\n",
     "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
     "    try:\n",
-    "        version = get_distribution(package_name).version\n",
-    "    except (DistributionNotFound, ImportError) as err:\n",
-    "        version = '-1'\n",
+    "        version = importlib.metadata.version(package_name)\n",
+    "    except importlib.metadata.PackageNotFoundError:\n",
+    "        version = -1\n",
     "    return version\n",
     "\n",
-    "if test_package('pyTEMlib') < '0.2023.1.0':\n",
+    "if test_package('pyTEMlib') < '0.2024.1.0':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "\n",
@@ -86,9 +87,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
+    "%matplotlib widget\n",
     "import matplotlib.pylab as plt\n",
     "import numpy as np\n",
+    "import sys\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    from google.colab import output\n",
+    "    output.enable_custom_widget_manager()\n",
     "\n",
     "import scipy.constants as const  #scientific constants"
    ]
@@ -159,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,17 +178,17 @@
     }
    ],
    "source": [
-    "## input \n",
+    "# --------- input  ---------------------------\n",
     "acceleration_voltage_V = U = 300.0 * 1000.0 #V   \n",
-    "\n",
+    "# --------------------------------------------\n",
     "## energy\n",
     "E_kin = eU = const.e * acceleration_voltage_V  # potential\n",
     "\n",
     "wave_length_m = const.h/np.sqrt(2*const.m_e*E_kin) # non-relativistic wavelength in m\n",
     "\n",
     "\n",
-    "##please note that we will keep all length units in nm if possible.\n",
-    "##otherwise we useonly SI units!!!\n",
+    "# # please note that we will keep all length units in Angstrom if possible.\n",
+    "# # otherwise we use only SI units!!!\n",
     "wave_length_A = wave_length_m *1e10 # now in Angstrom\n",
     "\n",
     "print(np.sqrt(2/const.m_e*E_kin)/const.c)\n",
@@ -211,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -223,8 +228,9 @@
     }
    ],
    "source": [
-    "# Input: Acceleration Voltage\n",
-    "E0 = acceleration_voltage = 200.0 *1000.0 #V\n",
+    "# ---------Input: Acceleration Voltage --\n",
+    "E0 = acceleration_voltage = 200.0 *1000.0 # V\n",
+    "# ---------------------------------------\n",
     "\n",
     "E_kin = eU = const.e * acceleration_voltage #potential\n",
     "\n",
@@ -269,15 +275,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The classic velocity of the electron  is 265241023.28 m/s or 88.47% of the speed of light\n",
-      "The relativistic velocity of the electron  is 208450034.42 m/s or 69.53% of the speed of light\n"
+      "The classic velocity of the electron  is 324852582.95 m/s or 108.36% of the speed of light\n",
+      "The relativistic velocity of the electron  is 232796486.28 m/s or 77.65% of the speed of light\n"
      ]
     }
    ],
@@ -297,22 +303,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Symmetry functions of spglib enabled\n",
-      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
       "The relativistically corrected wave length is 6.98 pm for acceleration voltage 30.0 kV\n"
      ]
     }
    ],
    "source": [
     "# Import Kinematic Scattering Library\n",
-    "import pyTEMlib.kinematic_scattering as ks         # Kinematic sCattering Library\n",
+    "import pyTEMlib.kinematic_scattering as ks         # Kinematic scattering Library\n",
     "\n",
     "acceleration_voltage= 30*1e3\n",
     "wave_length = ks.get_wavelength(acceleration_voltage)\n",
@@ -337,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -367,8 +371,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -611,7 +617,7 @@
       "    optional_inputKeys = ['crystal', 'lattice_parameter_nm', 'convergence_...\n",
       "\n",
       "FILE\n",
-      "    c:\\users\\gduscher\\anaconda3\\lib\\site-packages\\pytemlib\\kinematic_scattering.py\n",
+      "    c:\\users\\gduscher\\appdata\\local\\anaconda3\\envs\\pytemlib\\lib\\site-packages\\pytemlib\\kinematic_scattering.py\n",
       "\n",
       "\n"
      ]
@@ -641,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -711,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -738,5 +744,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
