--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -15,13 +15,13 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
+    "by Gerd Duscher and Khalid Hattar, Spring 2024\n",
     "\n",
-    "by Gerd Duscher, Spring 2023\n",
-    "\n",
-    "Microscopy Facilities<br>\n",
+    "Microscopy Facilities and Ion Beam Facility<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
-    "Materials Science & Engineering<br>\n",
+    "Materials Science & Engineering and Nuclear Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
+    "\n",
     "\n",
     "Background and methods to analysis and quantification of data acquired with transmission electron microscopes."
    ]
@@ -180,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -202,5 +202,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
