--- a/Introduction/CH1_03-Data_Representation.ipynb
+++ b/Introduction/CH1_03-Data_Representation.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2024\n",
+    "by Gerd Duscher and Khalid Hattar, Spring 2024\n",
     "<br>\n",
     "Microscopy Facilities<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
