--- a/Introduction/CH1_05-Course_Organization.ipynb
+++ b/Introduction/CH1_05-Course_Organization.ipynb
@@ -16,12 +16,14 @@
     "\n",
     "[Download](https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM//main/Introduction/CH1_05-Course_Organization.ipynb)\n",
     " \n",
+    "[![OpenInColab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_05-Course_Organization.ipynb)\n",
     "\n",
     "part of\n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "by Gerd Duscher, Spring 2023\n",
+    "by Gerd Duscher and Khalid Hattar, Spring 2024\n",
     "\n",
     "Microscopy Facilities<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
@@ -106,21 +108,21 @@
     "\n",
     "| Week | Lecture | Chp. | Lab |\n",
     "|------|---------|------|-----|\n",
-    "|01/23 - 01/29| 1,2:Introduction, Geometric Ray Optics | 1 | |\n",
-    "|01/29 - 02/05| 3,4: Kinematic Diffraction |  2,11 | Lab1: Basic Imaging|\n",
-    "|02/06 - 02/12 | 5,6:Kinematic Diffraction -parallel | 12  | Lab2: Basic Diffraction|\n",
-    "|02/13 - 02/19 | 7,8:Kinematic Diffraction -convergent   | 19,20 | Lab3: SAED |\n",
-    "|02/20 - 02/26 | 9,10:Dynamic Diffraction | 14,15 | Lab4: CBED |\n",
-    "|02/27 - 03/05 | 11,12:Imaging Overview | 22 | Lab5: Two Beams|\n",
-    "|03/06 - 03/12 | 13,14:Imaging Conventional | 24-27 | Lab7: Phase Contrast|\n",
-    "|03/20 - 03/26 | 15,16:Imaging Phase Contrast | 28,30 | Lab6: Exam Preparation|\n",
-    "|03/27 - 04/02 | 17,18:Imaging and Lens Aberrations | 31 | Exam |\n",
-    "|04/03 - 04/09  | 19 :Imaging Z-contrast| -  | Lab8: CTF|\n",
-    "|04/10 - 04/16 | 20,21:Spectroscopy EELS | 36-40 | Lab9: Z-contrast|\n",
-    "|04/17 - 04/23  | 22,23:Spectroscopy EDS | 33-35 | Lab10: EELS, ESI|\n",
-    "|04/24 - 04/30  | 24:Other Techniques | 29 ||\n",
-    "|05/01 - 05/07 | 25,26: TEM parts and vacuum | 5-9 ||\n",
-    "|05/09 | 28:Project discussion ||"
+    "|01/22 - 01/28 | 1,2:Introduction, Geometric Ray Optics | 1 | |\n",
+    "|01/29 - 02/04 | 3,4: Kinematic Diffraction |  2,11 | Lab1: Basic Imaging|\n",
+    "|02/05 - 02/11 | 5,6:Kinematic Diffraction -parallel | 12  | Lab2: Basic Diffraction|\n",
+    "|02/12 - 02/18 | 7,8:Kinematic Diffraction -convergent   | 19,20 | Lab3: SAED |\n",
+    "|02/19 - 02/25 | 9,10:Dynamic Diffraction | 14,15 | Lab4: CBED |\n",
+    "|02/26 - 03/03 | 11,12:Imaging Overview | 22 | Lab5: Two Beams|\n",
+    "|03/04 - 03/10 | 13,14:Imaging Conventional | 24-27 | Lab7: Phase Contrast|\n",
+    "|03/18 - 03/24 | 15,16:Imaging Phase Contrast | 28,30 | Lab6: Exam Preparation|\n",
+    "|03/25 - 03/31 | 17,18:Imaging and Lens Aberrations | 31 | Exam |\n",
+    "|04/01 - 04/07 | 19 :Imaging Z-contrast| -  | Lab8: CTF|\n",
+    "|04/08 - 04/14 | 20,21:Spectroscopy EELS | 36-40 | Lab9: Z-contrast|\n",
+    "|04/15 - 04/21 | 22,23:Spectroscopy EDS | 33-35 | Lab10: EELS, ESI|\n",
+    "|04/22 - 04/28 | 24:Other Techniques | 29 ||\n",
+    "|04/29 - 05/05 | 25,26: TEM parts and vacuum | 5-9 ||\n",
+    "|05/06 -  | 28:Project discussion ||"
    ]
   },
   {
@@ -205,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": "5",
