--- a/Introduction/CH1_03-Data_Representation.ipynb
+++ b/Introduction/CH1_03-Data_Representation.ipynb
@@ -60,9 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import matplotlib and numpy with these **magic** commands\n",
-    "#                       use \"inline\" instead of \"widget\" for non-interactive plots\n",
-    "%import sys\n",
+    "import sys\n",
     "if 'google.colab' in sys.modules:\n",
     "    !pip install  ipympl -q\n",
     "    from google.colab import output\n",
