--- a/Diffraction/CH2_01-Electron.ipynb
+++ b/Diffraction/CH2_01-Electron.ipynb
@@ -64,7 +64,7 @@
     "    try:\n",
     "        version = importlib.metadata.version(package_name)\n",
     "    except importlib.metadata.PackageNotFoundError:\n",
-    "        version = -1\n",
+    "        version = '-1'\n",
     "    return version\n",
     "\n",
     "if test_package('pyTEMlib') < '0.2024.1.0':\n",
@@ -83,19 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
     "import matplotlib.pylab as plt\n",
-    "import numpy as np\n",
+    "import numpy as n\n",
     "import sys\n",
     "if 'google.colab' in sys.modules:\n",
     "    from google.colab import output\n",
     "    output.enable_custom_widget_manager()\n",
     "\n",
-    "import scipy.constants as const  #scientific constants"
+    "import scipy  # we will use the constants part only"
    ]
   },
   {
@@ -164,14 +164,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0835915790298132\n",
       "Classic wave length is 2.24 pm for acceleration voltage 300.0 kV\n",
       " which is a velocity of 324852582.95 m/s or 108.36% of the speed of light\n"
      ]
@@ -182,21 +181,21 @@
     "acceleration_voltage_V = U = 300.0 * 1000.0 #V   \n",
     "# --------------------------------------------\n",
     "## energy\n",
-    "E_kin = eU = const.e * acceleration_voltage_V  # potential\n",
+    "E_kin = acceleration_voltage_V * scipy.constants.elementary_charge\n",
+    "h = scipy.constants.Planck\n",
+    "m0 = scipy.constants.electron_mass\n",
+    "c = scipy.constants.speed_of_light\n",
     "\n",
-    "wave_length_m = const.h/np.sqrt(2*const.m_e*E_kin) # non-relativistic wavelength in m\n",
-    "\n",
+    "wave_length_m = h/np.sqrt(2*m0*E_kin) # non-relativistic wavelength in m\n",
     "\n",
     "# # please note that we will keep all length units in Angstrom if possible.\n",
     "# # otherwise we use only SI units!!!\n",
     "wave_length_A = wave_length_m *1e10 # now in Angstrom\n",
     "\n",
-    "print(np.sqrt(2/const.m_e*E_kin)/const.c)\n",
-    "\n",
     "print(f'Classic wave length is {wave_length_A*100.:.2f} pm for acceleration voltage {acceleration_voltage_V/1000.:.1f} kV')\n",
     "# Notice that we change units in the output to make them most readable.\n",
     "\n",
-    "print(f' which is a velocity of {np.sqrt(2/const.m_e*E_kin):.2f} m/s or {np.sqrt(2/const.m_e*E_kin)/const.c*100:.2f}% of the speed of light')"
+    "print(f' which is a velocity of {np.sqrt(2/m0*E_kin):.2f} m/s or {np.sqrt(2/m0*E_kin)/c*100:.2f}% of the speed of light')"
    ]
   },
   {
@@ -216,26 +215,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The relativistically corrected wave length is 2.51 pm for acceleration voltage 200.0 kV\n"
+      "The relativistically corrected wave length is 1.97 pm for acceleration voltage 200.0 kV\n"
      ]
     }
    ],
    "source": [
     "# ---------Input: Acceleration Voltage --\n",
-    "E0 = acceleration_voltage = 200.0 *1000.0 # V\n",
+    "E0 = acceleration_voltage_V = 300.0 *1000.0 # V\n",
     "# ---------------------------------------\n",
-    "\n",
-    "E_kin = eU = const.e * acceleration_voltage #potential\n",
+    "E_kin = acceleration_voltage_V * scipy.constants.elementary_charge\n",
+    "h = scipy.constants.Planck\n",
+    "m0 = scipy.constants.electron_mass\n",
+    "c = scipy.constants.speed_of_light\n",
     "\n",
     "#relativisitic wavelength\n",
-    "wave_length = const.h/np.sqrt(2*const.m_e*E_kin*(1+E_kin/(2*const.m_e*const.c**2))) #in m\n",
+    "wave_length = h/np.sqrt(2* m0 * E_kin * (1 + E_kin / (2 * m0 * c**2))) #in m\n",
     "\n",
     "print(f'The relativistically corrected wave length is {wave_length*1e12:.2f} pm for acceleration voltage {acceleration_voltage/1000:.1f} kV')"
    ]
@@ -260,7 +261,7 @@
     "\n",
     "The same functionality (and code) is used in the kinematic_scattering library and we can test the values of above table.\n",
     "\n",
-    "Please change the acceleration voltage (**acceleration_voltage**) above.\n"
+    "Please change the acceleration voltage (**acceleration_voltage_V**) above.\n"
    ]
   },
   {
@@ -275,23 +276,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "For an acceleration voltage of 300keV: \n",
       "The classic velocity of the electron  is 324852582.95 m/s or 108.36% of the speed of light\n",
       "The relativistic velocity of the electron  is 232796486.28 m/s or 77.65% of the speed of light\n"
      ]
     }
    ],
    "source": [
-    "v = np.sqrt(E_kin*(E_kin+2*const.m_e*const.c**2)/(E_kin+const.m_e*const.c**2)**2)*const.c\n",
+    "v = np.sqrt(E_kin * (E_kin + 2 * m0 * c**2)/(E_kin + m0 * c**2) **2)*c\n",
     "\n",
-    "print(f'The classic velocity of the electron  is {np.sqrt(2/const.m_e*E_kin):.2f} m/s or {np.sqrt(2/const.m_e*E_kin)/const.c*100:.2f}% of the speed of light')\n",
-    "print(f'The relativistic velocity of the electron  is {v:.2f} m/s or {v/const.c*100:.2f}% of the speed of light')"
+    "print(f'For an acceleration voltage of {acceleration_voltage_V/1000:.0f}keV: ')\n",
+    "print(f'The classic velocity of the electron  is {np.sqrt(2/m0 * E_kin):.2f} m/s or {np.sqrt(2 / m0 * E_kin)/c * 100:.2f}% of the speed of light')\n",
+    "print(f'The relativistic velocity of the electron  is {v:.2f} m/s or {v/c*100:.2f}% of the speed of light')"
    ]
   },
   {
@@ -303,13 +306,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
+      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
+      "Symmetry functions of spglib enabled\n",
+      "Qt dialogs are not available\n",
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
       "The relativistically corrected wave length is 6.98 pm for acceleration voltage 30.0 kV\n"
      ]
     }
@@ -334,14 +342,18 @@
     "    -------\n",
     "        wave length in Angstrom\n",
     "    \"\"\"\n",
-    "\n",
-    "    eU = const.e * acceleration_voltage \n",
-    "    return const.h/np.sqrt(2*const.m_e*eU*(1+eU/(2*const.m_e*const.c**2)))*10**10\n"
+    "    E = acceleration_voltage * scipy.constants.elementary_charge\n",
+    "    h = scipy.constants.Planck\n",
+    "    m0 = scipy.constants.electron_mass\n",
+    "    c = scipy.constants.speed_of_light\n",
+    "    \n",
+    "    wavelength = h / np.sqrt(2 * m0 * E * (1 + (E / (2 * m0 * c ** 2))))\n",
+    "    return wavelength * 10**10\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +364,7 @@
       "\n",
       "get_wavelength(acceleration_voltage)\n",
       "    Calculates the relativistic corrected de Broglie wavelength of an electron in Angstrom\n",
-      "    \n",
+      "\n",
       "    Parameter:\n",
       "    ---------\n",
       "    acceleration_voltage: float\n",
@@ -647,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -658,8 +670,8 @@
      "text": [
       " elementary charge: 1.6022e-19 C\n",
       "\n",
-      " 1pA is 6.24e+06 electrons/s\n",
-      " 10pA is 62415 electrons/ms\n",
+      " pA is 6.24e+06 electrons/s or 6241.509 electrons/ms\n",
+      " 10pA is 6.24e+07 electrons/s\n",
       "100pA is 6.24e+08 electrons/s\n",
       "\n",
       " at 10pA an electron will hit the sample every 16.02 ns \n"
@@ -667,12 +679,12 @@
     }
    ],
    "source": [
-    "print(f\" elementary charge: {const.physical_constants['elementary charge'][0]:.5g} {const.physical_constants['elementary charge'][1]}\")\n",
-    "print(f'\\n 1pA is {1e-12/const.e:.3} electrons/s')\n",
-    "print(f' 10pA is {10e-12/const.e *1e-3 :.0f} electrons/ms')\n",
-    "print(f'100pA is {100e-12/const.e*1 :.3} electrons/s')\n",
+    "print(f\" elementary charge: {scipy.constants.physical_constants['elementary charge'][0]:.5g} {scipy.constants.physical_constants['elementary charge'][1]}\")\n",
+    "print(f'\\n pA is {1e-12/scipy.constants.elementary_charge:.3} electrons/s or {1e-12/scipy.constants.elementary_charge/1000:.3f} electrons/ms')\n",
+    "print(f' 10pA is {10e-12/scipy.constants.elementary_charge:.3} electrons/s')\n",
+    "print(f'100pA is {100e-12/scipy.constants.elementary_charge*1 :.3} electrons/s')\n",
     "\n",
-    "print(f'\\n at 10pA an electron will hit the sample every {const.e/10e-12 * 1e9:.2f} ns ')\n"
+    "print(f'\\n at 10pA an electron will hit the sample every {scipy.constants.elementary_charge/10e-12 * 1e9:.2f} ns ')"
    ]
   },
   {
@@ -680,6 +692,14 @@
    "metadata": {},
    "source": [
     "We see that we have much lower fluence in the TEM than in a laser (how could they do femtosecond pulses otherwise).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question\n",
+    "How long does one have to integrate a detector to register 1 electron with an electron beam of 1.6pA?"
    ]
   },
   {
@@ -717,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.0"
   },
   "toc": {
    "base_numbering": 1,
