--- a/Diffraction/CH2_01-Electron.ipynb
+++ b/Diffraction/CH2_01-Electron.ipynb
@@ -215,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The relativistically corrected wave length is 1.97 pm for acceleration voltage 200.0 kV\n"
+      "The relativistically corrected wave length is 1.97 pm for acceleration voltage 300.0 kV\n"
      ]
     }
    ],
@@ -238,7 +238,7 @@
     "#relativisitic wavelength\n",
     "wave_length = h/np.sqrt(2* m0 * E_kin * (1 + E_kin / (2 * m0 * c**2))) #in m\n",
     "\n",
-    "print(f'The relativistically corrected wave length is {wave_length*1e12:.2f} pm for acceleration voltage {acceleration_voltage/1000:.1f} kV')"
+    "print(f'The relativistically corrected wave length is {wave_length*1e12:.2f} pm for acceleration voltage {acceleration_voltage_V/1000:.1f} kV')"
    ]
   },
   {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -670,7 +670,7 @@
      "text": [
       " elementary charge: 1.6022e-19 C\n",
       "\n",
-      " pA is 6.24e+06 electrons/s or 6241.509 electrons/ms\n",
+      "  1pA is 6.24e+06 electrons/s or 6242 electrons/ms\n",
       " 10pA is 6.24e+07 electrons/s\n",
       "100pA is 6.24e+08 electrons/s\n",
       "\n",
@@ -680,7 +680,7 @@
    ],
    "source": [
     "print(f\" elementary charge: {scipy.constants.physical_constants['elementary charge'][0]:.5g} {scipy.constants.physical_constants['elementary charge'][1]}\")\n",
-    "print(f'\\n pA is {1e-12/scipy.constants.elementary_charge:.3} electrons/s or {1e-12/scipy.constants.elementary_charge/1000:.3f} electrons/ms')\n",
+    "print(f'\\n  1pA is {1e-12/scipy.constants.elementary_charge:.3} electrons/s or {1e-12/scipy.constants.elementary_charge/1000:.0f} electrons/ms')\n",
     "print(f' 10pA is {10e-12/scipy.constants.elementary_charge:.3} electrons/s')\n",
     "print(f'100pA is {100e-12/scipy.constants.elementary_charge*1 :.3} electrons/s')\n",
     "\n",
