--- a/Diffraction/CH2_01-Electron.ipynb
+++ b/Diffraction/CH2_01-Electron.ipynb
@@ -70,7 +70,8 @@
     "if test_package('pyTEMlib') < '0.2024.1.0':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
-    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !{sys.executable} -m pip install numpy==1.24.4\n",
     "print('done')"
    ]
   },
@@ -78,6 +79,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Please restart the session (in Runtime menu) in Google Colab.\n",
+    "\n",
     "### Load the plotting and figure packages"
    ]
   },
