--- a/Diffraction/CH2_02-Atomic_Form_Factor.ipynb
+++ b/Diffraction/CH2_02-Atomic_Form_Factor.ipynb
@@ -76,7 +76,8 @@
     "if test_package('pyTEMlib') < '0.2024.1.0':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
-    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !{sys.executable} -m pip install numpy==1.24.4\n",
     "print('done')"
    ]
   },
@@ -89,9 +90,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
+      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
+      "Symmetry functions of spglib enabled\n",
+      "Qt dialogs are not available\n",
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib  widget\n",
     "import matplotlib.pyplot as plt\n",
@@ -99,7 +112,11 @@
     "\n",
     "# additional package \n",
     "import scipy  # we use the constants part again.\n",
-    "\n",
+    "import sys\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    from google.colab import output\n",
+    "    output.enable_custom_widget_manager()\n",
+    "    \n",
     "# Import libraries from the pyTEMlib\n",
     "import pyTEMlib.kinematic_scattering as ks         # Kinematic scattering Library\n",
     "                             # with Atomic form factors from Kirklands book"
@@ -121,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -144,13 +161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bec5d9071e6247c28a7429072e2a651a",
+       "model_id": "2c57110383554ea1a539c35ca8cd3243",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,14 +203,14 @@
     "    #starting y\n",
     "    x_coords=[x] #array for the x coordinates of the plot\n",
     "    y_coords=[y] #array for the y coordinates of the plot\n",
-    "    vx = v_c * const.c #initial x velocity in m/s\n",
+    "    vx = v_c * scipy.constants.c #initial x velocity in m/s\n",
     "    vy = 0.0 #initial y velocity\n",
     "    \n",
     "    r = np.sqrt(x*x + y*y)\n",
     "    rold = r*2 # an arbitrary value more than r\n",
     "\n",
-    "    k_e = 1/(4* const.pi * const.epsilon_0) #[N m^2 C^-2]\n",
-    "    F_r_m = -k_e * Z* const.e**2/const.m_e # [ N m^2 / kg]\n",
+    "    k_e = 1/(4* scipy.constants.pi * scipy.constants.epsilon_0) #[N m^2 C^-2]\n",
+    "    F_r_m = -k_e * Z* scipy.constants.elementary_charge**2 /scipy.constants.electron_mass # [ N m^2 / kg]\n",
     "    \n",
     "    # The plot coordinates are generated as long as the incident particle\n",
     "    # is going towards the origin( which means that r < rold )\n",
@@ -252,13 +269,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d27f8af749b146b596ca07491dd85377",
+       "model_id": "ab456820e8894f06865d57a1732c35ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -342,13 +359,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "050c33c2d3c54e92b7f1e8473c0fa632",
+       "model_id": "105192ddb3314e7b82a32cc3ad14d638",
        "version_major": 2,
        "version_minor": 0
       },
