--- a/Diffraction/CH2_01-Electron.ipynb
+++ b/Diffraction/CH2_01-Electron.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "%matplotlib widget\n",
     "import matplotlib.pylab as plt\n",
-    "import numpy as n\n",
+    "import numpy as np\n",
     "import sys\n",
     "if 'google.colab' in sys.modules:\n",
     "    from google.colab import output\n",
