--- a/Diffraction/CH2_03-Basic_Crystallography.ipynb
+++ b/Diffraction/CH2_03-Basic_Crystallography.ipynb
@@ -483,6 +483,8 @@
     }
    ],
    "source": [
+    "# This does not work in Google Colab\n",
+    "\n",
     "from ase.visualize import view\n",
     "view(atoms*(4,4,1))"
    ]
