--- a/Introduction/CH1_00-Introduction.ipynb
+++ b/Introduction/CH1_00-Introduction.ipynb
@@ -16,17 +16,15 @@
     "[![OpenInColab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
     "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_00-Introduction.ipynb)\n",
     "\n",
-    "\n",
-    "part of \n",
+    "part of\n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
-    "\n",
     "by Gerd Duscher and Khalid Hattar, Spring 2024\n",
     "\n",
-    "Microscopy Facilities<br>\n",
+    "Microscopy Facilities and Ion Beam Facility<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
-    "Materials Science & Engineering<br>\n",
+    "Materials Science & Engineering and Nuclear Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
     "Background and methods to analysis and quantification of data acquired with transmission electron microscopes."
@@ -97,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.0"
   },
   "toc": {
    "base_numbering": "1",
