--- a/Introduction/CH1_02-Prerequisites.ipynb
+++ b/Introduction/CH1_02-Prerequisites.ipynb
@@ -15,21 +15,19 @@
     "\n",
     "[![OpenInColab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
     "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/Introduction/CH1_02-Prerequisites.ipynb)\n",
-    "\n",
-    "\n",
-    "part of \n",
+    " \n",
+    "part of\n",
     "\n",
     "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](../_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
     "by Gerd Duscher and Khalid Hattar, Spring 2024\n",
     "\n",
-    "Microscopy Facilities<br>\n",
+    "Microscopy Facilities and Ion Beam Facility<br>\n",
     "Institute of Advanced Materials & Manufacturing<br>\n",
-    "Materials Science & Engineering<br>\n",
+    "Materials Science & Engineering and Nuclear Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
-    "Background and methods to analysis and quantification of data acquired with transmission electron microscopes.\n",
-    "\n"
+    "Background and methods to analysis and quantification of data acquired with transmission electron microscopes."
    ]
   },
   {
